--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-awspublish": "^4.1.2",
+    "gulp-rename": "^2.0.0",
     "gulp-zip": "^5.1.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^10.0.0"
+  }
 }
