--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-awspublish": "^4.1.2",
+    "gulp-header": "^2.0.9",
     "gulp-zip": "^5.1.0"
   },
   "dependencies": {
