--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "rngcinema",
   "scripts": {},
   "devDependencies": {
+    "autoprefixer": "^10.2.6",
+    "cssnano": "^5.0.6",
     "gulp": "^4.0.2",
     "gulp-awspublish": "^4.1.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat-css": "^3.1.0",
     "gulp-header": "^2.0.9",
-    "gulp-zip": "^5.1.0"
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-postcss": "^9.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.0.1",
+    "gulp-zip": "^5.1.0",
+    "postcss": "^8.3.5"
   },
   "dependencies": {
     "dotenv": "^10.0.0"
-  }
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
