--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-concat-css": "^3.1.0",
     "gulp-header": "^2.0.9",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-include": "^2.4.1",
     "gulp-postcss": "^9.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.0.1",
