--- a/.github/workflows/dispatch-gif.yaml
+++ b/.github/workflows/dispatch-gif.yaml
@@ -2,13 +2,21 @@ name: run create-gif workflow
 on: [push]
 
 jobs:
-  run-commit:
+  dispatch-gif:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: benc-uk/workflow-dispatch@v1
+      - name: checkout current repo
+        uses: actions/checkout@v2
+
+      - name: get inputs from package.json
+        uses: myrotvorets/info-from-package-json-action@1.0.0
+        id: pkg
+
+      - name: dispatch create-gif with inputs
+        uses: benc-uk/workflow-dispatch@v1
         with:
           workflow: generate new gif
           repo: claudiacachayosorio/demo-gifs
           token: ${{ secrets.PAT_DISPATCH_GIF }}
-          inputs: '{ "repo": "rngcinema", "url": "http://rngcinema.s3-website-us-east-1.amazonaws.com/" }'
+          inputs: '{ "repo": "${{ steps.pkg.outputs.packageName }}", "url": "${{ steps.pkg.outputs.packageHomepage }}" }'
