--- a/.github/workflows/demo.yaml
+++ b/.github/workflows/demo.yaml
@@ -1,5 +1,8 @@
-name: run create-gif workflow
-on: [push]
+name: generate new demo
+
+on:
+  push:
+    branches: [main]
 
 jobs:
   dispatch-gif:
@@ -13,10 +16,10 @@ jobs:
         uses: myrotvorets/info-from-package-json-action@1.0.0
         id: pkg
 
-      - name: dispatch create-gif with inputs
+      - name: dispatch generator with inputs
         uses: benc-uk/workflow-dispatch@v1
         with:
-          workflow: generate new gif
+          workflow: generator
           repo: claudiacachayosorio/demo-gifs
           token: ${{ secrets.PAT_DISPATCH_GIF }}
           inputs: '{ "repo": "${{ steps.pkg.outputs.packageName }}", "url": "${{ steps.pkg.outputs.packageHomepage }}" }'
